--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Author URL: http://w3layouts.com
   <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
           <a class="navbar-brand" href="index.html">
-              <span class="fa fa-laptop"></span> Fathimathul Mina C H 
+               Fathimathul Mina C H 
           </a>
           <!-- if logo is image enable this   
       <a class="navbar-brand" href="#index.html">
@@ -122,6 +122,7 @@ Author URL: http://w3layouts.com
 <!-- home page second section -->
 <div class="py-5 w3l-resume">
     <div class="container py-lg-5 py-3">
+      <h3 class="title-big text-center mb-sm-5 mb-4">What are my skills </h3>
         <h5 class="title-small mb-2 text-center" id="skill-id"> My skill</h5>
         <!-- <h3 class="title-big mb-4">I Would Love to make your Ideas real </h3> -->
         <div class="row">
